      support stacking, even if the origin does not.
      (Martin Pool)

    * Fix a test case that was failing if encoding wasn't UTF-8.
      (John Arbash Meinel, #247585)

    * Fix "no buffer space available" error when branching with the new
      smart server protocol to or from Windows.
      (Andrew Bennetts, #246180)


  DOCUMENTATION:


  TESTING:


  API CHANGES:

    * The generic fetch code now uses three attributes on Repository objects
      to control fetch. The streams requested are controlled via :
      ``_fetch_order`` and ``_fetch_uses_deltas``. Setting these
      appropriately allows different repository implementations to recieve
      data in their optimial form. If the ``_fetch_reconcile`` is set then
      a reconcile operation is triggered at the end of the fetch.
      (Robert Collins)

    * The ``put_on_disk`` and ``get_tar_item`` methods in
      ``InventoryEntry`` were deprecated. (Ian Clatworthy)


  INTERNALS:

    * The code for exporting trees was refactored not to use the
      deprecated ``InventoryEntry`` methods. (Ian Clatworthy)

    * RuleSearchers return () instead of [] now when there are no matches.
      (Ian Clatworthy)


bzr 1.6beta3 2008-07-17
-----------------------

  FEATURES:

    * New ``pre_change_branch_tip`` hook that is called before the
      branch tip is moved, while the branch is write-locked.  See the User
      Reference for signature details.  (Andrew Bennetts)

    * Rule-based preferences can now be defined for selected files in
      selected branches, allowing commands and plugins to provide
      custom behaviour for files matching defined patterns.
      See ``Rule-based preferences`` (part of ``Configuring Bazaar``)
      in the User Guide and ``bzr help rules`` for more information.
      (Ian Clatworthy)

    * Sites may suggest a branch to stack new branches on.  (Aaron Bentley)

    * Stacked branches are now supported. See ``bzr help branch`` and 